--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <p>If you think you are beaten, you are</p>
     <p>If you think you dare not, you don't,</p>
     <p>If you like to win, but you think you can't</p>
-    <p>It is almost certain you won't.</b></p>
+    <p>It is almost certain you won't.</p>
 
    <p> <b>If you think you'll lose, you're lost</p>
     <p>For out of the world we find,</p>
