--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   
  
 <h3>
-  <p>If you think you are beaten, you are</p>
+  <p>If you think you are beaten, you are.</p>
     <p>If you think you dare not, you don't,</p>
     <p>If you like to win, but you think you can't</p>
     <p>It is almost certain you won't.</p>
@@ -32,7 +32,7 @@
     <p>You've got to be sure of yourself before</p>
       <p>You can ever win a prize.</p>
 
-   <p><b>Life's battles don't always go</p>
+   <p>Life's battles don't always go</p>
     <p>To the stronger or faster man,</p>
     <p>But soon or late the man who wins</p>
      <p>Is the man WHO THINKS HE CAN!”</p> </h3>
